Adding scholarship discount + test